--- a/package.json
+++ b/package.json
@@ -3,23 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.10.8",
-    "babel-plugin-import": "^1.11.0",
-    "mobx-react": "^5.4.2",
     "react": "^16.6.3",
-    "react-app-rewire-mobx": "^1.0.9",
-    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -30,11 +21,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.2.0",
-    "mobx": "^5.7.0",
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0"
-  }
+  ]
 }
