--- a/package.json
+++ b/package.json
@@ -7,23 +7,50 @@
     "babel-plugin-import": "^1.11.0",
     "mobx-react": "^5.4.2",
     "react": "^16.6.3",
-    "react-app-rewire-mobx": "^1.0.9",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "@babel/plugin-proposal-decorators": "^7.2.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "libraryDirectory": "es",
+          "style": "css"
+        },
+        "antd"
+      ]
+    ]
   },
   "browserslist": [
     ">0.2%",
@@ -32,9 +59,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.2.0",
     "mobx": "^5.7.0",
     "node-sass": "^4.10.0",
+    "rc-texty": "^0.2.0",
+    "rc-tween-one": "^2.2.18",
     "sass-loader": "^7.1.0"
   }
 }
