--- a/package.json
+++ b/package.json
@@ -50,7 +50,33 @@
         },
         "antd"
       ]
-    ]
+    ],
+    "env": {
+      "test": {
+        "presets": [
+          "env",
+          "react",
+          "stage-0"
+        ],
+        "plugins": [
+          [
+            "transform-decorators-legacy"
+          ],
+          [
+            "@babel/plugin-proposal-decorators",
+            {
+              "legacy": true
+            }
+          ],
+          [
+            "@babel/plugin-proposal-class-properties",
+            {
+              "loose": true
+            }
+          ]
+        ]
+      }
+    }
   },
   "browserslist": [
     ">0.2%",
@@ -59,10 +85,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "enzyme": "^3.8.0",
     "mobx": "^5.7.0",
     "node-sass": "^4.10.0",
     "rc-texty": "^0.2.0",
     "rc-tween-one": "^2.2.18",
+    "react-test-renderer": "^16.6.3",
     "sass-loader": "^7.1.0"
   }
 }
